2014-03-01	kitone	<kitone@gna.org>

	* plugins/actions/findandreplace/dialog-find-and-replace.ui
	Re-enable focus on entries. Patch by Pete Beardmore.

2014-03-01	kitone	<kitone@gna.org>

	* plugins/actions/findandreplace/findandreplace.cc
	* src/document.h
	Fix typo. Patch by Pete Beardmore.

2014-01-26  kitone  <kitone@gna.org>

	* configure.ac:
	* plugins/actions/keyframesmanagement/keyframesgenerator.cc:
	* plugins/actions/keyframesmanagement/keyframesgeneratorusingframe.cc:
	* plugins/actions/keyframesmanagement/mediadecoder.h:
	* plugins/actions/wavefrommanagement/mediadecoder.h:
	* plugins/actions/wavefrommanagement/waveformgenerator.cc:
	* src/gstreamer_utility.cc:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	Start port to gstreamer/mm 1.0.

2014-01-05  kitone  <kitone@gna.org>

	* share/ui/subtitleeditor.ui:
	* src/gui/application.cc:
	* src/gui/application.h:
	* src/vp/gstplayer.cc:
	* src/we/waveformeditor.cc:
	* src/we/waveformeditor.h:
	Start removing deprecated widgets.

2014-01-04  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/dialog-advancedsubstationalpha-preferences.ui:
	* plugins/subtitleformats/substationalpha/dialog-substationalpha-preferences.ui:
	Fix: port to gtk3.

2014-01-04  kitone  <kitone@gna.org>

	* src/gui/cellrenderercustom.h:
	Fix: call finish_editing in editing_done.

2014-01-04  kitone  <kitone@gna.org>

	* autogen.sh:
	* configure.ac:
	* configure.in:
	* plugins/actions/about/Makefile.am:
	* plugins/actions/adjusttime/Makefile.am:
	* plugins/actions/applytranslation/Makefile.am:
	* plugins/actions/bestfit/Makefile.am:
	* plugins/actions/changeframerate/Makefile.am:
	* plugins/actions/clipboard/Makefile.am:
	* plugins/actions/combinesubtitles/Makefile.am:
	* plugins/actions/command/Makefile.am:
	* plugins/actions/configurekeyboardshortcuts/Makefile.am:
	* plugins/actions/dialoguize/Makefile.am:
	* plugins/actions/documentmanagement/Makefile.am:
	* plugins/actions/documentsnavigation/Makefile.am: