@@ -1,5 +1,10 @@
 2014-03-01	kitone	<kitone@gna.org>
 
+	* plugins/actions/findandreplace/findandreplace.cc
+	Extend regex remplacement using submatches. Patch by Pete Beardmore.
+
+2014-03-01	kitone	<kitone@gna.org>
+
 	* plugins/actions/findandreplace/dialog-find-and-replace.ui
 	Re-enable focus on entries. Patch by Pete Beardmore.
 
